--- a/UBC-POI.html
+++ b/UBC-POI.html
@@ -114,7 +114,7 @@
 
         var poiHighlightMarker= {
         	radius: 4,
-        	fillColor: "#62BA9F",
+        	fillColor: "#55A693",
         	color: "#38806A",
         	weight: 1,
         	opacity: 0.3,
