--- a/UBC-POI.html
+++ b/UBC-POI.html
@@ -23,6 +23,11 @@
        We won't use any of p5.js's commands, though! -->
   </head>
   <style>
+  @font-face {
+    font-family:"Century Gothic";
+    src:url("../exploratory-lab/GOTHIC.TTF") format('truetype');
+  }
+
   .legend {
     font-family: "Century Gothic";
     text-align: left;
