--- a/UBC-POI.html
+++ b/UBC-POI.html
@@ -25,7 +25,7 @@
   <style>
   @font-face {
     font-family:"Century Gothic";
-    src:url("../exploratory-lab/GOTHIC.TTF") format('truetype');
+    src:url("../leaflet-filter/fonts/GOTHIC.TTF") format('truetype');
   }
 
   .legend {
